# schwab-api-cli

./: .env.example  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  safety.json.example
.github/workflows/: publish-crates.yml
crates/schwab-api/: Cargo.toml  README.md
crates/schwab-api/src/: auth.rs  client.rs  config.rs  error.rs  lib.rs  query.rs
crates/schwab-api/src/endpoints/: accounts.rs  mod.rs  orders.rs  transactions.rs  user.rs
crates/schwab-api/src/models/: account.rs  mod.rs  order.rs  transaction.rs  user.rs
crates/schwab-cli/: Cargo.toml  README.md
crates/schwab-cli/src/: auth_callback.rs  auth_reminder.rs  capabilities.rs  cli.rs  config.rs  disclaimer.rs  env_schema.rs  flatten.rs  instructions.rs  lib.rs  main.rs  market_conditions.rs  market_hours.rs  market_info.rs  mode.rs  order_builder.rs  order_schema.rs  order_status.rs  output.rs  plan.rs  portfolio.rs  rules.rs  safety.rs  safety_config.rs  tls.rs
crates/schwab-cli/src/agent/: daemon.rs  exits.rs  format.rs  journal.rs  llm.rs  market_context.rs  mod.rs  paths.rs  regime.rs  runner.rs  schedule.rs  sim.rs  spread_analytics.rs  state.rs  telegram_format.rs
crates/schwab-cli/src/commands/: accounts.rs  agent.rs  auth.rs  disclaimer.rs  market.rs  meta.rs  mod.rs  options.rs  orders.rs  plan.rs  trading.rs  transactions.rs  ui_cmd.rs  user.rs
crates/schwab-cli/src/human/: mod.rs
crates/schwab-cli/src/notify/: mod.rs  telegram.rs
crates/schwab-cli/src/options/: mod.rs  positions.rs  schema.rs  symbology.rs  types.rs  validate.rs
crates/schwab-cli/src/options/strategies/: iron_condor.rs  mod.rs  vertical.rs
crates/schwab-cli/src/trade_audio/: mod.rs
crates/schwab-cli/src/ui/: agent_health.rs  chart_markers.rs  context.rs  dashboard.rs  discover.rs  market_status.rs  menu.rs  mod.rs  positions_panel.rs  rules_view.rs  spread_feed.rs  spread_live.rs  spread_payoff.rs  theme.rs  tui_render.rs  watch.rs
crates/schwab-cli/tests/: smoke.rs
crates/schwab-market-data/: Cargo.toml  README.md
crates/schwab-market-data/src/: lib.rs
crates/schwab-market-data/src/endpoints/: chains.rs  instruments.rs  markets.rs  mod.rs  price_history.rs  quotes.rs
crates/schwab-trader/: Cargo.toml  README.md
crates/schwab-trader/src/: adaptation.rs  capital.rs  cli.rs  closure.rs  config.rs  entry.rs  history_features.rs  journal.rs  learn.rs  lib.rs  main.rs  market_cache.rs  market_ctx.rs  market_session.rs  notify.rs  options_reserve.rs  orders.rs  reconcile.rs  regime.rs  risk.rs  rules.rs  shuffle.rs  sim.rs  sources.rs  technical.rs  thesis_exit.rs
crates/schwab-trader/src/agent/: llm.rs  mod.rs  paths.rs  runner.rs  schedule.rs  state.rs
crates/schwab-trader/src/backtest/: cache.rs  cron.rs  exits.rs  mod.rs  prefetch.rs  report.rs  runner.rs
crates/schwab-trader/src/commands/: agent_cmd.rs  backtest_cmd.rs  capital_cmd.rs  journal_cmd.rs  mod.rs  rules_cmd.rs  scan_cmd.rs  sim_cmd.rs  sources_cmd.rs  trade_cmd.rs  watch_cmd.rs  watchlist_cmd.rs
crates/schwab-trader/src/ui/: context.rs  health.rs  journal_view.rs  live.rs  live_feed.rs  mod.rs  positions_panel.rs  render.rs  stock_payoff.rs  watch.rs
crates/schwab-trader/src/watchlist/: build.rs  cron.rs  mod.rs  patch.rs  pool.rs
crates/schwab-trader/tests/: integration_logic.rs  smoke.rs  watchlist_logic.rs
docs/: AGENT_SCHEDULE.md  CRATES_IO_PUBLISH.md  LLM_SCHEMA_REFERENCE.md  OPTIONS_RULES.md  TRADER_ROLLOUT.md  TRADER_RULES.md
plans/: README.md  TRADE_PLAN.md  example-sgov-income-barbell.yaml  example-sgov-to-jpst-rebalance.yaml
rules/: README.md  options-monthly-income.yaml  options-pilot-8709.yaml  options-pilot-9947.yaml  options-rules.example.yaml  trader-intraday-9947.yaml  trader-rules.example.yaml  trader-swing-9947.yaml
rules/universe/: sp100-liquid.yaml
scripts/: crates-io-common.sh  generate-trade-audio.sh  publish-crate.sh  wait-for-crate.sh
