[workspace]
resolver = "2"
members = ["crates/schwab-api", "crates/schwab-market-data", "crates/schwab-cli"]

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["SchwabInvestBot Contributors"]
rust-version = "1.75"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env", "string"] }
console = "0.15"
directories = "5"
indicatif = "0.17"
inquire = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
rcgen = "0.14"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
