[package]
name = "schwab-api-cli"
description = "schwab-api-cli — agent-first CLI for Charles Schwab Trader API (experimental — use at your own risk)"
version = "0.1.3"
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["schwab", "cli", "trading", "options", "brokerage"]
categories = ["command-line-utilities", "finance"]
include = ["src/**/*", "Cargo.toml", "README.md", "../../LICENSE"]

[lib]
name = "schwab_cli"
path = "src/lib.rs"

[[bin]]
name = "schwab"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
chrono-tz = "0.10"
clap.workspace = true
comfy-table.workspace = true
console.workspace = true
crossterm.workspace = true
directories.workspace = true
dotenvy = "0.15"
indicatif.workspace = true
inquire.workspace = true
ratatui.workspace = true
schwab-api-cli-core = { path = "../schwab-api", version = "0.1.1" }
schwab-api-cli-market-data = { path = "../schwab-market-data", version = "0.1.1" }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
textwrap.workspace = true
tokio.workspace = true
unicode-width.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
urlencoding = "2"
rcgen.workspace = true
rustls.workspace = true
tokio-rustls.workspace = true
reqwest.workspace = true
webbrowser = "1"
libc = "0.2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
