[package]
name = "schwab-market-data"
description = "Charles Schwab Market Data API client (Production v1)"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
schwab-api = { path = "../schwab-api" }
serde_json.workspace = true
urlencoding = "2"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
