[package]
name = "schwab-market-data"
description = "Charles Schwab Market Data API client (Production v1)"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["schwab", "market-data", "quotes", "finance"]
categories = ["api-bindings", "finance"]
include = ["src/**/*", "Cargo.toml", "README.md", "../../LICENSE"]

[dependencies]
schwab-api = { path = "../schwab-api", version = "0.1.0" }
serde_json.workspace = true
urlencoding = "2"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
