[package]
name = "schwab-api-cli-market-data"
description = "Charles Schwab Market Data API client for schwab-api-cli (Production v1)"
version = "0.1.1"
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["schwab", "market-data", "quotes", "finance"]
categories = ["api-bindings", "finance"]
include = ["src/**/*", "Cargo.toml", "README.md", "../../LICENSE"]

[lib]
name = "schwab_market_data"
path = "src/lib.rs"

[dependencies]
schwab-api-cli-core = { path = "../schwab-api", version = "0.1.1" }
serde_json.workspace = true
urlencoding = "2"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
