[package]
name = "schwab-trader"
description = "Equity swing trading agent CLI for Charles Schwab (short/medium-term stocks, post-fill OCO, LLM advisor)"
version = "0.1.4"
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["schwab", "trading", "equity", "swing", "agent"]
categories = ["command-line-utilities", "finance"]
include = ["src/**/*", "Cargo.toml", "README.md", "../../LICENSE"]

[[bin]]
name = "schwab-trader"
path = "src/main.rs"

[lib]
name = "schwab_trader"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
chrono-tz = "0.10"
clap.workspace = true
directories.workspace = true
dotenvy = "0.15"
reqwest.workspace = true
schwab-cli = { package = "schwab-api-cli", path = "../schwab-cli", version = "0.1.4" }
schwab-api-cli-core = { path = "../schwab-api", version = "0.1.1" }
schwab-api-cli-market-data = { path = "../schwab-market-data", version = "0.1.1" }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
crossterm.workspace = true
ratatui.workspace = true

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[lints.rust]
warnings = "deny"
